# trabalho-final-egito

./: Cargo.toml  LICENSE  README.md  programa.mc
mini-interpretador/: Cargo.toml
mini-interpretador/src/: main.rs
mini-interpretador/src/ast/: lexer.rs
src/: ast.rs  env.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  programa.mc
tests/: test_interpretador.rs  test_lexer.rs  test_parser.rs
